--- a/2ndindex.html
+++ b/2ndindex.html
@@ -13,7 +13,7 @@
 
     <a href="https://janssen-fahrschule.de/" target="_self">Link to janssen-fahrschule</a>
     <ol>
-      <li>Drive to the end of the road</li>
+      <li style= "color: red; text-decoration: underline;">Drive to the end of the road</li>
       <li>Turn right</li>
       <li>Go stright across the first two roundabouts</li>
       <li>Turn left at the third roundabout</li>
@@ -25,7 +25,7 @@
 
     <ul type="circule">
 
-<h1>Shopping List </h1>
+<h1 style= "color:blue; text-decoration: underline;">Shopping List </h1>
 <li> 
   <a href="https://www.aldi-nord.de/">Go to aldi-nord</a>
 </li>
@@ -57,7 +57,7 @@
 </ul>
 
 
-    <h2>Steps</h2>
+    <h2 style= "color: blue; text-decoration: underline;" >Steps</h2>
 <ol>  
     <li>Heat oven to 180C/160C fan/gas 4.</li>
     <li>
